[tool.poetry]
name = "amla_at1_25608516"
version = "12"
description = "assignment 1 python package"
authors = ["duy tung nguyen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
scikit-learn = "1.5.1"
pandas = "2.2.2"
jupyterlab = "4.2.3"
joblib = "1.4.2"
xgboost = "2.1.0"
hyperopt = "0.2.7"
lightgbm = "4.4.0"
lime = "0.2.0.1"
wandb = "0.17.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
